--- a/Poker Training Tool/Poker Training Tool.csproj
+++ b/Poker Training Tool/Poker Training Tool.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Classes\Card.cs" />
     <Compile Include="Classes\Deck.cs" />
     <Compile Include="Classes\Hand.cs" />
+    <Compile Include="Classes\Question.cs" />
     <Compile Include="Classes\Table.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
